--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/app.css": "/css/app.css",
     "/css/admin.css": "/css/admin.css",
     "/css/front.css": "/css/front.css",
+    "/js/front_jquery.js": "/js/front_jquery.js",
     "/js/map.js": "/js/map.js"
 }
